--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -36,11 +37,14 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.9",
     "@willsoto/nestjs-objection": "^8.1.0",
     "bcrypt": "^5.0.1",
+    "bull": "^4.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "knex": "^2.3.0",
+    "libphonenumber-js": "^1.10.13",
     "objection": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -48,6 +52,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "twilio": "^3.82.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
