--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:dev": "STAGE=dev nest start --watch",
     "start:debug": "STAGE=dev nest start --debug --watch",
     "start:prod": "STAGE=prod node dist/src/main",
+    "start:com": "STAGE=com nest start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "STAGE=dev jest",
     "test:watch": "jest --watch",
@@ -43,6 +44,7 @@
     "bull": "^4.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.2",
     "knex": "^2.3.0",
     "libphonenumber-js": "^1.10.13",
     "objection": "^3.0.1",
